--- a/src/routes/partials/product.ejs
+++ b/src/routes/partials/product.ejs
@@ -5,7 +5,7 @@
         <button onclick="addProduct(this)">Agregar</button>
     </div>
     <h4><%= producto.nombre_producto %></h4>
-    <h5 class="product-price">Desde <%= producto.precio_detal %></h5>
+    <h5 class="product-price">Desde <%= producto.precio_detal %> $</h5>
 </li>
 <script>
     async function addProduct(button) {
