--- a/src/routes/partials/product.ejs
+++ b/src/routes/partials/product.ejs
@@ -6,8 +6,10 @@
     </div>
     <h4><%= producto.nombre_producto %></h4>
     <h5 class="product-price">Desde <%= producto.precio_detal %> $</h5>
+    <a href="/product?name=<%= producto.nombre_producto %>" class="product-detail">Mas Detalles</a>
 </li>
 <script>
+
     async function addProduct(button) {
         const productView = button.parentElement;
         const productLi = productView.parentElement;
