--- a/src/routes/user/producto.ejs
+++ b/src/routes/user/producto.ejs
@@ -24,31 +24,34 @@
     <main>
         <div class="principal-container">
             <div class="image-container">
-                <img id="example-liquor" src="/images/Licores/whisky-oldpar.jpg">
+                <img id="example-liquor" src="<%= producto.imagen %>">
             </div>
             <div class="info-container">
                 <div>
-                    <p style="font-size: 1.8vmin;">Inicio > Old Par</p>
-                    <h2>Whisky Grand Old Parr Aged 12 years 750ml</h2>
+                    <p style="font-size: 1.8vmin;">Inicio > <%= producto.nombre_producto %></p>
+                    <h2><%= producto.tipo %> <%= producto.nombre_producto %></h2>
                     <p style="line-height: 1.5;">
-                        Unidades Disponibles: 7<br>
-                        Categoria: Whisky
+                        Unidades Disponibles: <%= producto.stock %><br>
+                        Categoria: <%= producto.tipo %>
                     </p>
                     <span id="price">
-                        100,00$
+                        Precio: <%= producto.precio_detal %> $
                     </span>
+                    <p id="description">
+                        <%= producto.descripcion %>
+                    </p>
                 </div>
                 <div style="flex-direction: column; display: flex; gap: 3vmin;">
                     <details>
                         <summary>FICHA TÉCNICA</summary>
-                        Nombre: Whisky Grand Old Parr Aged 12 years<br>
-                        Unidades por caja: 4<br>
-                        Tipo: Whisky<br>
-                        Productor: <br>
-                        Capacidad: 750ml <br>
+                        Nombre: <%= producto.nombre_producto %><br>
+                        Unidades por caja: <%= producto.paquete %><br>
+                        Tipo: <%= producto.tipo %><br>
+                        Precio Al mayor (Apartir de 12 Unidades): <%= producto.precio_mayorista %> $<br>
+                        Capacidad: <%= producto.litros %> <br>
                     </details>
                     <div id="units">
-                        <input type="number" class="productCant">
+                        <input type="number" class="productCant" value="1">
                         <button class="addButton">Añadir</button>
                     </div>
                 </div>
@@ -57,51 +60,14 @@
         <hr>
         <h3 class="subtitle">Productos Relacionados</h3>
         <ul class="productSection">
-            <li>
-                <div class="productView">
-                    <input type="number" class="productCant">
-                    <button>Agregar</button>
-                </div>
-                <h4>Anis Cartujo</h4>
-                <h5>Desde 0.00$</h3>
-            </li>
-            <li>
-                <div class="productView">
-                    <input type="number" class="productCant">
-                    <button>Agregar</button>
-                </div>
-                <h4>Anis Cartujo</h4>
-                <h5>Desde 0.00$</h3>
-            </li>
-            <li>
-                <div class="productView">
-                    <input type="number" class="productCant">
-                    <button>Agregar</button>
-                </div>
-                <h4>Anis Cartujo</h4>
-                <h5>Desde 0.00$</h3>
-            </li>
-            <li>
-                <div class="productView">
-                    <input type="number" class="productCant">
-                    <button>Agregar</button>
-                </div>
-                <h4>Anis Cartujo</h4>
-                <h5>Desde 0.00$</h3>
-            </li>
-            <li>
-                <div class="productView">
-                    <input type="number" class="productCant">
-                    <button>Agregar</button>
-                </div>
-                <h4>Anis Cartujo</h4>
-                <h5>Desde 0.00$</h3>
-            </li>
+            <% relacionados.forEach(producto => { %>
+                <%- include('../partials/product', {producto}) %>
+            <% }) %>
         </ul>
     </main>
 
     
-    <%- include('./partials/footer') %>
+    <%- include('../partials/footer') %>
     <script src="/js/user/producto.js"></script>
 </body>
 </html>
