Cambiando SearchBar y cositas

--- a/src/routes/partials/user-header.ejs
+++ b/src/routes/partials/user-header.ejs
@@ -2,15 +2,14 @@
     <section>
         <img onclick="window.location.href='/'" src="/images/Logo/logo-landing.png">
         <datalist id="catalogo">
-            <option value="Ron">Ron</option>
-            <option value="Whisky">Whisky</option>
-            <option value="Vinos">Vinos</option>
-            <option value="Baseron">BasedeRon</option>
-            <option value="Vodka">Vodka</option>
-            <option value="Sangría">Sangría</option>
-            <option value="Anis">Anis</option>
+            <option value="SantaTeresa">SantaTeresa</option>
+            <option value="BajoCero">BajoCero</option>
+            <option value="OldPar">OldPar</option>
+            <option value="Buchanan">Buchanan</option>
+            <option value="AnisCartujo">AnisCartujo</option>
+            <option value="Cartacho">Cartacho</option>
         </datalist>
-        <input type="search" list="catalogo" id="search-bar">
+        <input placeholder="Buscar por Nombre..." type="search" list="catalogo" id="search-bar">
         <section>
             <img id="user-photo" src="https://picsum.photos/200/300">
             <button id="logButton" onclick="actionButtonLog()">Iniciar sesión</button>
