Agregando el AboutRepartos

--- a/src/routes/user/about.ejs
+++ b/src/routes/user/about.ejs
@@ -64,7 +64,7 @@
             </div>
         </section>
 
-        <section class="delivery-areas">
+        <section id="aboutRepartos" class="delivery-areas">
             <img src="/images/icons/location.svg" style="grid-column: 1/2; grid-row: 1/2; align-self: center;">
             <h3 style="grid-column: 2/7; grid-row: 1/2; margin: 0; align-self: center;">
                 Repartimos hasta tu zona
