--- a/src/routes/partials/footer.ejs
+++ b/src/routes/partials/footer.ejs
@@ -7,7 +7,7 @@
         <li>Envío en menos de 3 horas gratis el mismo día</li>
         <li onclick="window.location.href='/about'">¿Quienes somos?</li>
         <li onclick="window.location.href='/faq'">Preguntas Frecuentes</li>
-        <li>Zona de repartos</li>
+        <li onclick="window.location.href='/about#aboutRepartos'">Zona de repartos</li>
         <li onclick="window.location.href='/terms'">Términos y Condiciones</li>
         <li onclick="window.location.href='/privacy'">Políticas de Privación</li>
         <li onclick="window.location.href='/returns'">Políticas de Devolución</li>
