--- a/src/layouts/Gerente/Main/Main.html
+++ b/src/layouts/Gerente/Main/Main.html
@@ -36,6 +36,39 @@
             </a>
         </ul>
     </nav>
-    <main></main>
+    <main>
+        <div class="Content_dashboard">
+            <section class="Distint_article">
+                <article>
+                    <h4>Productos en Inventario</h4>
+                    <div>
+                        <span>1220</span>
+                        <button>Ver Detalles</button>
+                        <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M504-480 320-664l56-56 240 240-240 240-56-56 184-184Z"/></svg>
+                    </div>
+                </article>
+                <article>
+                    <h4>Registro de Ventas</h4>
+                    <div>
+                        <span>1220</span>
+                        <button>Ver Detalles</button>
+                        <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M504-480 320-664l56-56 240 240-240 240-56-56 184-184Z"/></svg>
+                    </div>
+                </article>
+                <article>
+                    <h4>Pedidos</h4>
+                    <div>
+                        <span>1220</span>
+                        <button>Ver Detalles</button>
+                        <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M504-480 320-664l56-56 240 240-240 240-56-56 184-184Z"/></svg>
+                    </div>
+                </article>
+            </section>
+            <section class="Productos mas vendidos">
+                <h2>Productos mas vendidos</h2>
+                <div class="Grafica"></div>
+            </section>
+        </div>
+    </main>
 </body>
 </html>
