--- a/src/layouts/Gerente/Main/Main.css
+++ b/src/layouts/Gerente/Main/Main.css
@@ -13,5 +13,65 @@ font-family: san-ferif y font-size: 14px ya que voy a utilizar em*/
     font-family: sans-serif;
     font-size: 14px;
 }
+main{
+    position: absolute;
+    top: 110px;
+    left: 135px;
+    border: 1px solid #000;
+    width: 85%;
+    height: 480px;
+    padding: 25px;
+}
+main .Content_dashboard{
+    border: 1px solid #000;
+    height: 440px;
+    display: flex;
+    align-items: center;
+    flex-flow: column wrap;
+    padding: 10px;
+}
+main .Content_dashboard .Distint_article{
+    border: 1px solid #000;
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    padding: 15px;
 
-
+}
+main .Content_dashboard .Distint_article article{
+    border: 1px solid #000;
+    width: 270px;
+    padding: 10px;
+    border-radius: 5px;
+}
+main .Content_dashboard .Distint_article article div{
+    margin-top: 3px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+main .Content_dashboard .Distint_article article:nth-child(1) div span{
+    font-size: 1.5em;
+    color: var(--SecondaryColor);
+}
+main .Content_dashboard .Distint_article article button{
+    width: 130px;
+    margin: 0 auto;
+    padding: 5px 10px;
+    border: none;
+    outline: none;
+    border-radius: 10px;
+    font-size: 1em;
+    background-color: var(--SecondaryColor);
+    color: var(--PrimaryColor);
+    text-align: center;
+    transition: .1s linear;
+    cursor: pointer;
+    font-weight: 500;
+}
+main .Content_dashboard .Distint_article article button:hover{
+    background-color: var(--HoverColor);
+    color: var(--ColorNavigatorBar);
+    font-weight: 600;
+    border: 2px solid var(--ColorNavigatorBar);
+}
