--- a/src/layouts/Gerente/Main/Main.html
+++ b/src/layouts/Gerente/Main/Main.html
@@ -45,28 +45,28 @@
                         <span>1220</span>
                         <button>Ver Detalles</button>
                     </div>
-                    
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M504-480 320-664l56-56 240 240-240 240-56-56 184-184Z"/></svg>
                 </article>
                 <article>
                     <h4>Registro de Ventas</h4>
                     <div>
                         <span>1220</span>
                         <button>Ver Detalles</button>
-                        <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M504-480 320-664l56-56 240 240-240 240-56-56 184-184Z"/></svg>
                     </div>
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M504-480 320-664l56-56 240 240-240 240-56-56 184-184Z"/></svg>
                 </article>
                 <article>
                     <h4>Pedidos</h4>
                     <div>
                         <span>1220</span>
                         <button>Ver Detalles</button>
-                        <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M504-480 320-664l56-56 240 240-240 240-56-56 184-184Z"/></svg>
                     </div>
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M504-480 320-664l56-56 240 240-240 240-56-56 184-184Z"/></svg>
                 </article>
             </section>
-            <section class="Productos mas vendidos">
+            <section class="Productos_vendidos">
                 <h2>Productos mas vendidos</h2>
-                <div class="Grafica"></div>
+                <div class="Grafica">Grafica</div>
             </section>
         </div>
     </main>
