--- a/src/layouts/Gerente/Main/Main.html
+++ b/src/layouts/Gerente/Main/Main.html
@@ -43,25 +43,29 @@
                     <h4>Productos en Inventario</h4>
                     <div>
                         <span>1220</span>
-                        <button>Ver Detalles</button>
+                        <button>Ver Detalles
+                            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M504-480 320-664l56-56 240 240-240 240-56-56 184-184Z"/></svg>
+                        </button>
                     </div>
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M504-480 320-664l56-56 240 240-240 240-56-56 184-184Z"/></svg>
                 </article>
                 <article>
                     <h4>Registro de Ventas</h4>
                     <div>
                         <span>1220</span>
-                        <button>Ver Detalles</button>
+                        <button>Ver Detalles
+                            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M504-480 320-664l56-56 240 240-240 240-56-56 184-184Z"/></svg>
+                        </button>
                     </div>
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M504-480 320-664l56-56 240 240-240 240-56-56 184-184Z"/></svg>
                 </article>
                 <article>
                     <h4>Pedidos</h4>
                     <div>
                         <span>1220</span>
-                        <button>Ver Detalles</button>
+                        <button>Ver Detalles
+                            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M504-480 320-664l56-56 240 240-240 240-56-56 184-184Z"/></svg>
+                        </button>
                     </div>
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M504-480 320-664l56-56 240 240-240 240-56-56 184-184Z"/></svg>
+                    
                 </article>
             </section>
             <section class="Productos_vendidos">
@@ -70,5 +74,7 @@
             </section>
         </div>
     </main>
+    <script src="main.js"></script>
 </body>
+
 </html>
