--- a/public/css/user/chat.css
+++ b/public/css/user/chat.css
@@ -1,14 +1,14 @@
 /* styles.css */
 #chatbot {
     position: fixed;
-    bottom: 60px; /* Espacio para el ícono */
+    bottom: 70px; /* Espacio para el ícono */
     right: 20px;
     width: 300px;
-    border: 1px solid #ccc;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     background-color: white;
     z-index: 1000;
+    overflow: hidden;
 }
 
 #chatIcon {
@@ -31,22 +31,28 @@
 
 #messages {
     flex: 1;
-    padding: 10px;
     overflow-y: auto;
-    border-bottom: 1px solid #ccc;
+    padding: 1em;
+
 }
 
 #userInput {
     padding: 10px;
     border: none;
-    border-top: 1px solid #ccc;
     width: calc(100%);
+    outline: none;
+    border-top: 2px solid var(--blue);
 }
 
 #sendButton {
     padding: 10px;
     border: none;
-    background-color: #007bff;
+    background-color: var(--blue);
     color: white;
     cursor: pointer;
+    font-size: 1em;
+}
+
+#sendButton:hover {
+    background-color: var(--blue);
 }
