--- a/src/routes/admin/dashboard.ejs
+++ b/src/routes/admin/dashboard.ejs
@@ -10,7 +10,7 @@
     <%- include('../partials/header'); %>
     <%- include('../partials/navbar'); %>
     <main>
-        div class="Content_dashboard">
+        <div class="Content_dashboard">
             <section class="Distint_article">
                 <article>
                     <h4>Productos en Inventario</h4>
