--- a/public/css/user/chat.css
+++ b/public/css/user/chat.css
@@ -9,6 +9,7 @@
     background-color: white;
     z-index: 1000;
     overflow: hidden;
+    border: 2px solid var(--blue);
 }
 
 #chatIcon {
@@ -17,6 +18,16 @@
     right: 20px;
     font-size: 30px;
     cursor: pointer;
+    transition: scale 0.5s;
+}
+
+#chatIcon:active {
+    transform: scale(0.90);
+}
+
+#chatIcon svg {
+    stroke: white;
+    stroke-width: 1;
 }
 
 .hidden {
@@ -42,6 +53,7 @@
     width: calc(100%);
     outline: none;
     border-top: 2px solid var(--blue);
+    font-weight: bold;
 }
 
 #sendButton {
@@ -51,6 +63,7 @@
     color: white;
     cursor: pointer;
     font-size: 1em;
+    font-weight: bold;
 }
 
 #sendButton:hover {
