--- a/public/css/user/producto.css
+++ b/public/css/user/producto.css
@@ -146,8 +146,9 @@ hr{
         width: 100dvw;
     }
     .addButton{
-        width: 10vmin;
-        height: 5vmin;
+        width: 100%;
+        height: 6vmin;
+        font-weight: bold;
     }
 
     main {
