--- a/src/routes/user/about.ejs
+++ b/src/routes/user/about.ejs
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/css/user/general.css">
     <link rel="stylesheet" href="/css/user/about.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="shortcut icon" href="/images/Logo/logo-landing.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap" rel="stylesheet">
