--- a/src/routes/user/faq.ejs
+++ b/src/routes/user/faq.ejs
@@ -6,6 +6,7 @@
     <title>Drinkers</title>
     <link rel="stylesheet" href="/css/user/general.css">
     <link rel="stylesheet" href="/css/user/faq.css">
+    <link rel="shortcut icon" href="/images/Logo/logo-landing.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
