--- a/public/css/user/producto.css
+++ b/public/css/user/producto.css
@@ -103,6 +103,7 @@ hr{
     .principal-container{
         flex-direction: column;
         align-items: center;
+        margin-bottom: 50vh;
     }
 
     .image-container{
@@ -116,6 +117,7 @@ hr{
         height: 50dvh;
         padding: 1em;
     }
+
 
     .info-container #description {
         width: 100%;
@@ -134,7 +136,7 @@ hr{
 
     details{
         width: 80dvw;
-        font-size: 2vmin;
+        font-size: 2.5vmin;
         padding: .5em;
     }
 
@@ -151,9 +153,4 @@ hr{
         font-weight: bold;
     }
 
-    main {
-        display: flex;
-        flex-direction: column;
-        gap: 30vmin;
-    }
 }
