Actualizando Factura DB

--- a/public/css/user/about.css
+++ b/public/css/user/about.css
@@ -237,4 +237,8 @@
     .how-to-buy-container > div > p {
         width: 70vmin;
     }
+
+    .delivery-areas * {
+        display: flex;
+    }
 }
