--- a/src/layouts/Landing/pay/index.html
+++ b/src/layouts/Landing/pay/index.html
@@ -243,6 +243,22 @@
         </section>
 
         <section class="third-step">
+            <form>
+                <input placeholder="Nombre y Apellido">
+                <select>
+                    <option value="">V</option>
+                    <option value="">E</option>
+                    <option value="">J</option>
+                </select>
+                <input placeholder="Documento">
+                <input placeholder="Telefono">
+                <textarea placeholder="Dirección"></textarea>
+                <textarea placeholder="Requerimientos extras"></textarea>
+                <button>Aceptar</button>
+            </form>
+        </section>
+
+        <section class="fourth-step">
             <div style="grid-row: 1/3; grid-column: 1/5;" class="subcontainer subcontainer3-selected">
                 <img class="check" src="../../../../public/images/icons/checkfill.svg">
                 <h3 class="container-title">Pago Único</h3>
