Third Step Finished

--- a/src/layouts/Landing/pay/index.html
+++ b/src/layouts/Landing/pay/index.html
@@ -243,18 +243,18 @@
         </section>
 
         <section class="third-step">
-            <form>
-                <input placeholder="Nombre y Apellido">
-                <select>
+            <form style="grid-column: 1/9; grid-row: 1/7; display: grid; justify-content: center; grid-template-columns: repeat(8,12.5%); grid-template-rows: repeat(6,16.66%); gap: 1vmin;">
+                <input placeholder="Nombre y Apellido" style="grid-column: 1/4; grid-row: 1/2;">
+                <select style="grid-column: 4/5; grid-row: 1/2;">
                     <option value="">V</option>
                     <option value="">E</option>
                     <option value="">J</option>
                 </select>
-                <input placeholder="Documento">
-                <input placeholder="Telefono">
-                <textarea placeholder="Dirección"></textarea>
-                <textarea placeholder="Requerimientos extras"></textarea>
-                <button>Aceptar</button>
+                <input placeholder="Documento" style="grid-column: 5/7; grid-row: 1/2;">
+                <input placeholder="Teléfono" style="grid-column: 7/9; grid-row: 1/2;">
+                <textarea placeholder="Dirección" style="grid-column: 1/9; grid-row: 2/4;"></textarea>
+                <textarea placeholder="Requerimientos extras" style="grid-column: 1/9; grid-row: 4/6;"></textarea>
+                <button style="grid-column: 6/7; grid-column: 8/9;">Aceptar</button>
             </form>
         </section>
 
