Arreglando Algunas cosas del Convert en Paginas Statis y Fiill Impuestos

--- a/src/routes/partials/product.ejs
+++ b/src/routes/partials/product.ejs
@@ -1,6 +1,6 @@
 <li>
     <div class="productView">
-        <img class="productImg" src="<%= producto.imagen %>">
+        <img loading="lazy" class="productImg" src="<%= producto.imagen %>">
         <input type="number" class="productCant">
         <button onclick="addProduct(this)">Agregar</button>
     </div>
